(library
 (name yomer)
 (preprocess
  (pps ppx_deriving.make ppx_deriving.show ppx_deriving.enum ppx_yojson_conv))
 (libraries
  actaa
  cohttp
  cohttp-eio
  discord
  eio
  eio.core
  eio.unix
  fmt
  logs
  mirage-clock-unix
  mirage-crypto-rng
  pcre2
  ptime
  table
  uuseg.string
  uutf
  yaml
  yojson))
