(rule
 (targets build_info.ml)
 (deps
  (:x build_info.cppo.ml))
 (action
  (run
   %{bin:cppo}
   -D
   %{env:REVISION=REVISION}
   -D
   %{env:VERSION=VERSION}
   %{x}
   -o
   %{targets})))

(library
 (name yomer)
 (preprocess
  (pps ppx_deriving.make ppx_deriving.show ppx_deriving.enum ppx_yojson_conv))
 (libraries
  actaa
  cohttp
  cohttp-eio
  discord
  eio
  eio.core
  eio.unix
  fmt
  fqueue
  jingoo
  logs
  mirage-clock-unix
  mirage-crypto-rng
  pcre2
  ptime
  table
  uri
  uuseg.string
  uutf
  yaml
  yojson))
